baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__01_lexer__assignments.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Simple"
Word "assignment"
Function "function"
Word "simple_assign"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Equals "="
IntegerLiteral "1"
Semicolon ";"
Word "x"
Equals "="
IntegerLiteral "5"
Semicolon ";"
Return "return"
Word "x"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Compound"
Word "add"
Word "assignment"
Function "function"
Word "add_assign"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Equals "="
IntegerLiteral "10"
Semicolon ";"
Word "x"
PlusEquals "+="
IntegerLiteral "5"
Semicolon ";"
Return "return"
Word "x"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Compound"
Word "sub"
Word "assignment"
Function "function"
Word "sub_assign"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Equals "="
IntegerLiteral "10"
Semicolon ";"
Word "x"
MinusEquals "-="
IntegerLiteral "3"
Semicolon ";"
Return "return"
Word "x"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Compound"
Word "mul"
Word "assignment"
Function "function"
Word "mul_assign"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Equals "="
IntegerLiteral "3"
Semicolon ";"
Word "x"
StarEquals "*="
IntegerLiteral "4"
Semicolon ";"
Return "return"
Word "x"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Multiple"
Word "assignments"
Function "function"
Word "multi_assign"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "a"
Equals "="
IntegerLiteral "1"
Semicolon ";"
Let "let"
Word "b"
Equals "="
IntegerLiteral "2"
Semicolon ";"
Word "a"
Equals "="
IntegerLiteral "10"
Semicolon ";"
Word "b"
Equals "="
IntegerLiteral "20"
Semicolon ";"
Return "return"
Word "a"
Plus "+"
Word "b"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Assignment"
In "in"
Word "loop"
LParen "("
Word "uses"
Break "break"
Slash "/"
Continue "continue"
Word "we"
Word "just"
Word "implemented"
RParen ")"
Function "function"
Word "assign_in_loop"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "sum"
Equals "="
IntegerLiteral "0"
Semicolon ";"
Let "let"
Word "i"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
LParen "("
Word "i"
Less "<"
IntegerLiteral "5"
RParen ")"
LBrace "{"
Word "sum"
PlusEquals "+="
Word "i"
Semicolon ";"
Word "i"
PlusEquals "+="
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "sum"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Block"
Word "expression"
Word "with"
Word "tail"
Minus "-"
Word "tests"
Word "PopReplace"
Function "function"
Word "block_with_tail"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Equals "="
LBrace "{"
Let "let"
Word "y"
Equals "="
IntegerLiteral "1"
Semicolon ";"
Let "let"
Word "z"
Equals "="
IntegerLiteral "2"
Semicolon ";"
Word "y"
Plus "+"
Word "z"
RBrace "}"
Semicolon ";"
Return "return"
Word "x"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Let"
Word "without"
Word "semicolons"
LParen "("
Word "formatter"
Word "synthesizes"
Word "them"
RParen ")"
Function "function"
Word "let_no_semicolons"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Equals "="
IntegerLiteral "1"
Let "let"
Word "y"
Equals "="
IntegerLiteral "2"
Return "return"
Word "x"
Plus "+"
Word "y"
RBrace "}"
Slash "/"
Slash "/"
Word "Mixed"
Word "semicolons"
Word "on"
Let "let"
Word "statements"
Function "function"
Word "let_mixed_semicolons"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "a"
Equals "="
IntegerLiteral "1"
Semicolon ";"
Let "let"
Word "b"
Equals "="
IntegerLiteral "2"
Let "let"
Word "c"
Equals "="
IntegerLiteral "3"
Semicolon ";"
Let "let"
Word "d"
Equals "="
IntegerLiteral "4"
Return "return"
Word "a"
Plus "+"
Word "b"
Plus "+"
Word "c"
Plus "+"
Word "d"
RBrace "}"
Slash "/"
Slash "/"
Word "Edge"
Word "case"
Colon ":"
Word "call"
Word "followed"
Word "by"
Word "parens"
Word "on"
Word "next"
Word "line"
Minus "-"
Word "parses"
Word "as"
Word "foo"
LParen "("
RParen ")"
LParen "("
IntegerLiteral "1"
RParen ")"
LParen "("
Word "chained"
Word "call"
RParen ")"
Function "function"
Word "edge_call_then_parens"
LParen "("
Word "foo"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
LParen "("
LParen "("
Word "int"
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "never"
RParen ")"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "foo"
LParen "("
RParen ")"
LParen "("
IntegerLiteral "1"
RParen ")"
IntegerLiteral "2"
RBrace "}"
Slash "/"
Slash "/"
Word "Edge"
Word "case"
Colon ":"
Word "call"
Word "followed"
Word "by"
Word "bracket"
Word "on"
Word "next"
Word "line"
Minus "-"
Word "parses"
Word "as"
Word "foo"
LParen "("
RParen ")"
LBracket "["
IntegerLiteral "0"
RBracket "]"
LParen "("
Word "index"
Word "into"
Word "result"
RParen ")"
Function "function"
Word "edge_call_then_index"
LParen "("
Word "foo"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBracket "["
RBracket "]"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "foo"
LParen "("
RParen ")"
LBracket "["
IntegerLiteral "0"
RBracket "]"
IntegerLiteral "1"
RBrace "}"
Slash "/"
Slash "/"
Word "Edge"
Word "case"
Colon ":"
Word "identifier"
Word "followed"
Word "by"
Word "object"
Word "literal"
Minus "-"
Word "parses"
Word "as"
Word "EdgeFoo"
LBrace "{"
Word "x"
Colon ":"
IntegerLiteral "1"
RBrace "}"
LParen "("
Word "constructor"
RParen ")"
Class "class"
Word "EdgeFoo"
LBrace "{"
Word "x"
Colon ":"
Word "int"
Comma ","
RBrace "}"
Function "function"
Word "edge_type_then_object"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "EdgeFoo"
LBrace "{"
Word "x"
Colon ":"
IntegerLiteral "1"
RBrace "}"
Dot "."
Word "x"
RBrace "}"
Slash "/"
Slash "/"
Word "Edge"
Word "case"
Colon ":"
Let "let"
Word "with"
Function "function"
Word "call"
Comma ","
Word "then"
Word "index"
Word "on"
Word "next"
Word "line"
Minus "-"
Word "parses"
Word "as"
Word "bar"
LParen "("
RParen ")"
LBracket "["
IntegerLiteral "0"
RBracket "]"
Function "function"
Word "edge_let_call_then_index"
LParen "("
Word "bar"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBracket "["
RBracket "]"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Equals "="
Word "bar"
LParen "("
RParen ")"
LBracket "["
IntegerLiteral "0"
RBracket "]"
Word "x"
RBrace "}"
Slash "/"
Slash "/"
Word "Edge"
Word "case"
Colon ":"
Word "semicolon"
Word "forces"
Word "statement"
Word "boundary"
Minus "-"
LBracket "["
IntegerLiteral "0"
RBracket "]"
Is "is"
Word "separate"
Word "expression"
Function "function"
Word "edge_semicolon_forces_boundary"
LParen "("
Word "bar"
Colon ":"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBracket "["
RBracket "]"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "bar"
LParen "("
RParen ")"
Semicolon ";"
LBracket "["
IntegerLiteral "0"
RBracket "]"
IntegerLiteral "1"
RBrace "}"
