baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__01_lexer__if_let.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Tests"
For "for"
Error "`"
If "if"
Let "let"
Error "`"
Word "expressions"
Comma ","
Word "modeled"
Word "on"
Word "Rust"
Error "'"
Word "s"
Error "`"
If "if"
Let "let"
Error "`"
Dot "."
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Error "`"
If "if"
Let "let"
Less "<"
Word "pat"
Greater ">"
Equals "="
Less "<"
Word "expr"
Greater ">"
LBrace "{"
Word "then"
RBrace "}"
LBracket "["
Else "else"
LBrace "{"
Else "else"
RBrace "}"
RBracket "]"
Error "`"
Word "desugars"
Word "at"
Word "AST"
Word "lowering"
Slash "/"
Slash "/"
Word "time"
Word "to"
Word "a"
Error "`"
Match "match"
Error "`"
Word "expression"
Word "with"
Word "two"
Word "arms"
Colon ":"
Slash "/"
Slash "/"
Match "match"
LParen "("
Less "<"
Word "expr"
Greater ">"
RParen ")"
LBrace "{"
Less "<"
Word "pat"
Greater ">"
FatArrow "=>"
Less "<"
Word "then"
Greater ">"
Comma ","
Word "_"
FatArrow "=>"
Less "<"
Word "else_or_unit"
Greater ">"
RBrace "}"
Function "function"
Word "if_let_type_narrow_int"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "7"
Semicolon ";"
If "if"
Let "let"
Word "y"
Colon ":"
Word "int"
Equals "="
Word "x"
LBrace "{"
Return "return"
Word "y"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Return "return"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Function "function"
Word "if_let_type_narrow_string"
LParen "("
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Let "let"
Word "x"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
Quote "\""
Word "hi"
Quote "\""
Semicolon ";"
If "if"
Let "let"
Word "y"
Colon ":"
Word "string"
Equals "="
Word "x"
LBrace "{"
Return "return"
Word "y"
Semicolon ";"
RBrace "}"
Return "return"
Quote "\""
Word "fallback"
Quote "\""
Semicolon ";"
RBrace "}"
Function "function"
Word "if_let_with_else"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
Quote "\""
Word "nope"
Quote "\""
Semicolon ";"
If "if"
Let "let"
Word "y"
Colon ":"
Word "int"
Equals "="
Word "x"
LBrace "{"
Return "return"
Word "y"
Semicolon ";"
RBrace "}"
Else "else"
LBrace "{"
Return "return"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
RBrace "}"
Function "function"
Word "if_let_with_else_value"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "5"
Semicolon ";"
Let "let"
Word "result"
Equals "="
If "if"
Let "let"
Word "y"
Colon ":"
Word "int"
Equals "="
Word "x"
LBrace "{"
Word "y"
Star "*"
IntegerLiteral "2"
RBrace "}"
Else "else"
LBrace "{"
IntegerLiteral "0"
RBrace "}"
Semicolon ";"
Return "return"
Word "result"
Semicolon ";"
RBrace "}"
Function "function"
Word "if_let_else_if"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Pipe "|"
Word "bool"
Equals "="
Word "true"
Semicolon ";"
If "if"
Let "let"
Word "y"
Colon ":"
Word "int"
Equals "="
Word "x"
LBrace "{"
Return "return"
Word "y"
Semicolon ";"
RBrace "}"
Else "else"
If "if"
Let "let"
Word "z"
Colon ":"
Word "string"
Equals "="
Word "x"
LBrace "{"
Return "return"
IntegerLiteral "0"
Semicolon ";"
RBrace "}"
Else "else"
LBrace "{"
Return "return"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
RBrace "}"
Function "function"
Word "if_let_else_if_let_chain"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
Quote "\""
Word "abc"
Quote "\""
Semicolon ";"
If "if"
Let "let"
Word "a"
Colon ":"
Word "int"
Equals "="
Word "x"
LBrace "{"
Return "return"
Word "a"
Semicolon ";"
RBrace "}"
Else "else"
If "if"
Let "let"
Word "b"
Colon ":"
Word "string"
Equals "="
Word "x"
LBrace "{"
Return "return"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Else "else"
LBrace "{"
Return "return"
Minus "-"
IntegerLiteral "2"
Semicolon ";"
RBrace "}"
RBrace "}"
Function "function"
Word "if_let_nested"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "outer"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "3"
Semicolon ";"
Let "let"
Word "inner"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "4"
Semicolon ";"
If "if"
Let "let"
Word "a"
Colon ":"
Word "int"
Equals "="
Word "outer"
LBrace "{"
If "if"
Let "let"
Word "b"
Colon ":"
Word "int"
Equals "="
Word "inner"
LBrace "{"
Return "return"
Word "a"
Plus "+"
Word "b"
Semicolon ";"
RBrace "}"
Else "else"
LBrace "{"
Return "return"
Word "a"
Semicolon ";"
RBrace "}"
RBrace "}"
Return "return"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "NOTE"
Colon ":"
Word "irrefutable"
Error "`"
If "if"
Let "let"
Error "`"
LParen "("
Word "e"
Dot "."
Word "g"
Dot "."
Error "`"
If "if"
Let "let"
Word "y"
Equals "="
IntegerLiteral "42"
LBrace "{"
DotDotDot "..."
RBrace "}"
Error "`"
RParen ")"
Word "is"
Word "intentionally"
Slash "/"
Slash "/"
Word "not"
Word "covered"
Word "here"
Error "—"
Word "BAML"
Error "'"
Word "s"
Match "match"
Word "exhaustiveness"
Word "check"
Word "reports"
Word "the"
Slash "/"
Slash "/"
Word "fall-through"
Word "arm"
Word "as"
Quote "\""
Word "unreachable"
Word "arm"
Quote "\""
Comma ","
Word "which"
Word "keeps"
Word "the"
Word "program"
Word "out"
Word "of"
Word "the"
Slash "/"
Slash "/"
Error "`"
Word "compiles"
Slash "/"
Error "`"
Word "tier"
Dot "."
Word "Rust"
Word "rejects"
Word "the"
Word "same"
Word "pattern"
Word "at"
Word "the"
Word "parser"
Word "level"
Dot "."
Function "function"
Word "if_let_as_tail_expr"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "10"
Semicolon ";"
Slash "/"
Slash "/"
Word "Block"
Word "tail"
Word "expression"
Error "—"
Word "no"
Word "trailing"
Word "semicolon"
Dot "."
If "if"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "v"
LBrace "{"
Word "n"
RBrace "}"
Else "else"
LBrace "{"
Minus "-"
IntegerLiteral "1"
RBrace "}"
RBrace "}"
