baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__01_lexer__if_let_edge_cases.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Edge"
Word "cases"
Word "that"
Word "exercise"
Word "the"
Word "boundaries"
Word "of"
Error "`"
If "if"
Let "let"
Error "`"
Word "semantics"
Colon ":"
Slash "/"
Slash "/"
Minus "-"
Word "the"
Word "binding"
Word "does"
Word "NOT"
Word "leak"
Word "out"
Word "past"
Word "the"
Word "construct"
Slash "/"
Slash "/"
Minus "-"
Word "the"
Word "binding"
Word "does"
Word "NOT"
Word "leak"
Word "into"
Word "the"
Else "else"
Word "branch"
Slash "/"
Slash "/"
Minus "-"
Word "shadowing"
Word "of"
Word "an"
Word "outer"
Word "binding"
Word "works"
Word "and"
Word "is"
Word "restored"
Word "afterwards"
Slash "/"
Slash "/"
Minus "-"
Word "nested"
Error "`"
If "if"
Let "let"
Error "`"
Word "works"
Comma ","
Word "including"
In "in"
Word "scrutinee"
Word "position"
Slash "/"
Slash "/"
Minus "-"
Word "wildcards"
Slash "/"
Word "pure-type"
Word "patterns"
Word "work"
Slash "/"
Slash "/"
Minus "-"
Word "else-if-let"
Word "chains"
Word "work"
Slash "/"
Slash "/"
Word "The"
Word "outer"
Error "`"
Word "x"
Error "`"
Word "is"
Word "shadowed"
Word "inside"
Word "the"
Error "`"
If "if"
Let "let"
Error "`"
Word "body"
Comma ","
Word "then"
Word "visible"
Word "again"
Word "after"
Dot "."
Function "function"
Word "if_let_shadow_then_restore"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Equals "="
IntegerLiteral "100"
Semicolon ";"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "3"
Semicolon ";"
Let "let"
Word "inside"
Equals "="
If "if"
Let "let"
Word "x"
Colon ":"
Word "int"
Equals "="
Word "v"
LBrace "{"
Word "x"
Plus "+"
IntegerLiteral "1"
RBrace "}"
Else "else"
LBrace "{"
IntegerLiteral "0"
RBrace "}"
Semicolon ";"
Slash "/"
Slash "/"
Error "`"
Word "x"
Error "`"
Word "here"
Word "MUST"
Word "refer"
Word "to"
Word "the"
Word "outer"
Word "binding"
LParen "("
IntegerLiteral "100"
RParen ")"
Comma ","
Word "not"
Word "the"
Word "if-let"
Error "'"
Word "s"
Error "`"
Word "x"
Error "`"
Dot "."
Return "return"
Word "inside"
Plus "+"
Word "x"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "The"
Word "if-let"
Word "binding"
Word "must"
Word "NOT"
Word "be"
Word "visible"
In "in"
Word "the"
Else "else"
Word "branch"
Error "—"
Word "Rust"
Error "'"
Word "s"
Word "behaviour"
Dot "."
Slash "/"
Slash "/"
Word "Here"
Error "`"
Word "n"
Error "`"
In "in"
Word "the"
Else "else"
Word "refers"
Word "to"
Word "the"
Word "outer"
Error "`"
Word "n"
Error "`"
Comma ","
Word "NOT"
Word "the"
Word "inner"
Word "if-let"
Error "'"
Word "s"
Error "`"
Word "n"
Error "`"
Dot "."
Function "function"
Word "if_let_else_sees_outer_not_inner"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "n"
Equals "="
IntegerLiteral "999"
Semicolon ";"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
Quote "\""
Word "nope"
Quote "\""
Semicolon ";"
Return "return"
If "if"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "v"
LBrace "{"
Word "n"
RBrace "}"
Else "else"
LBrace "{"
Slash "/"
Slash "/"
Word "Here"
Error "`"
Word "n"
Error "`"
Word "is"
Word "the"
Word "OUTER"
IntegerLiteral "999"
Comma ","
Word "not"
Word "the"
Word "if-let"
Error "'"
Word "s"
Word "int"
Word "binding"
Dot "."
Word "n"
RBrace "}"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Error "`"
If "if"
Let "let"
Error "`"
Word "where"
Word "the"
Word "scrutinee"
Word "expression"
Word "is"
Word "itself"
Word "a"
Word "nested"
Error "`"
If "if"
Let "let"
Error "`"
Dot "."
Word "The"
Slash "/"
Slash "/"
Word "inner"
Word "if-let"
Word "returns"
Error "`"
Word "string"
Pipe "|"
Word "int"
Error "`"
LParen "("
Word "one"
Word "branch"
Word "evaluates"
Word "to"
Word "a"
Word "string"
Comma ","
Word "the"
Slash "/"
Slash "/"
Word "other"
Word "to"
Word "int"
RParen ")"
Word "so"
Word "the"
Word "outer"
Error "`"
Let "let"
Word "x"
Colon ":"
Word "int"
Error "`"
Word "arm"
Word "is"
Word "refutable"
Word "and"
Word "both"
Word "branches"
Slash "/"
Slash "/"
Word "are"
Word "reachable"
Dot "."
Function "function"
Word "if_let_in_scrutinee"
LParen "("
Word "outer"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Comma ","
Word "mid"
Colon ":"
Word "int"
Pipe "|"
Word "string"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Let "let"
Word "v"
Equals "="
If "if"
Let "let"
Word "y"
Colon ":"
Word "int"
Equals "="
Word "outer"
LBrace "{"
Word "y"
Star "*"
IntegerLiteral "2"
RBrace "}"
Else "else"
LBrace "{"
Quote "\""
Word "fallback"
Quote "\""
RBrace "}"
Semicolon ";"
If "if"
Let "let"
Word "x"
Colon ":"
Word "int"
Equals "="
Word "v"
LBrace "{"
Return "return"
Quote "\""
Word "got_int"
Quote "\""
Semicolon ";"
RBrace "}"
Else "else"
LBrace "{"
Return "return"
Quote "\""
Word "got_other"
Quote "\""
Semicolon ";"
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Two"
Word "sibling"
Error "`"
If "if"
Let "let"
Error "`"
Word "s"
Word "reuse"
Word "the"
Word "same"
Word "binding"
Word "name"
Word "without"
Word "conflict"
Dot "."
Function "function"
Word "if_let_siblings_same_name"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "a"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "1"
Semicolon ";"
Let "let"
Word "b"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "2"
Semicolon ";"
Let "let"
Word "r1"
Equals "="
If "if"
Let "let"
Word "x"
Colon ":"
Word "int"
Equals "="
Word "a"
LBrace "{"
Word "x"
RBrace "}"
Else "else"
LBrace "{"
IntegerLiteral "0"
RBrace "}"
Semicolon ";"
Let "let"
Word "r2"
Equals "="
If "if"
Let "let"
Word "x"
Colon ":"
Word "int"
Equals "="
Word "b"
LBrace "{"
Word "x"
RBrace "}"
Else "else"
LBrace "{"
IntegerLiteral "0"
RBrace "}"
Semicolon ";"
Return "return"
Word "r1"
Plus "+"
Word "r2"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Error "`"
Else "else"
If "if"
Let "let"
Error "`"
Word "chain"
Error "—"
Word "three"
Word "branches"
Comma ","
Word "each"
Word "binds"
Word "its"
Word "own"
Word "name"
Dot "."
Function "function"
Word "if_let_chained_else_if_let"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Pipe "|"
Word "bool"
Equals "="
Quote "\""
Word "abc"
Quote "\""
Semicolon ";"
If "if"
Let "let"
Word "i"
Colon ":"
Word "int"
Equals "="
Word "v"
LBrace "{"
Return "return"
Word "i"
Semicolon ";"
RBrace "}"
Else "else"
If "if"
Let "let"
Word "s"
Colon ":"
Word "string"
Equals "="
Word "v"
LBrace "{"
Return "return"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Else "else"
If "if"
Let "let"
Word "b"
Colon ":"
Word "bool"
Equals "="
Word "v"
LBrace "{"
Return "return"
IntegerLiteral "2"
Semicolon ";"
RBrace "}"
Else "else"
LBrace "{"
Return "return"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
RBrace "}"
Slash "/"
Slash "/"
Word "Body"
Word "block"
Word "declares"
Word "its"
Word "OWN"
Word "local"
Word "that"
Word "shadows"
Word "the"
Word "if-let"
Word "binding"
Dot "."
Function "function"
Word "if_let_body_local_shadows_binding"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "5"
Semicolon ";"
If "if"
Let "let"
Word "x"
Colon ":"
Word "int"
Equals "="
Word "v"
LBrace "{"
Let "let"
Word "x"
Equals "="
IntegerLiteral "100"
Semicolon ";"
Return "return"
Word "x"
Semicolon ";"
RBrace "}"
Return "return"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Lambda"
Word "inside"
Word "if-let"
Word "body"
Word "captures"
Word "the"
Word "binding"
Dot "."
Function "function"
Word "if_let_lambda_captures_binding"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "6"
Semicolon ";"
If "if"
Let "let"
Word "x"
Colon ":"
Word "int"
Equals "="
Word "v"
LBrace "{"
Let "let"
Word "f"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "x"
Plus "+"
IntegerLiteral "10"
RBrace "}"
Semicolon ";"
Return "return"
Word "f"
LParen "("
RParen ")"
Semicolon ";"
RBrace "}"
Return "return"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
