baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__01_lexer__let_else.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Tests"
For "for"
Error "`"
Let "let"
DotDotDot "..."
Else "else"
Error "`"
Word "statements"
Comma ","
Word "modeled"
Word "on"
Word "Rust"
Error "'"
Word "s"
Word "let-else"
Dot "."
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Error "`"
Let "let"
Less "<"
Word "pat"
Greater ">"
Equals "="
Less "<"
Word "expr"
Greater ">"
Else "else"
LBrace "{"
Less "<"
Word "div"
Greater ">"
RBrace "}"
Semicolon ";"
Error "`"
Word "desugars"
Word "at"
Word "AST"
Word "lowering"
Word "time"
Word "into"
Slash "/"
Slash "/"
Word "three"
Word "statements"
Colon ":"
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Let "let"
Word "__let_else_tmp_N"
Equals "="
Less "<"
Word "expr"
Greater ">"
Semicolon ";"
Slash "/"
Slash "/"
Match "match"
LParen "("
Word "__let_else_tmp_N"
RParen ")"
LBrace "{"
Slash "/"
Slash "/"
Less "<"
Word "pat"
Greater ">"
FatArrow "=>"
Word "null"
Comma ","
Slash "/"
Slash "/"
Word "_"
FatArrow "=>"
LBrace "{"
Less "<"
Word "div"
Greater ">"
RBrace "}"
Slash "/"
Slash "/"
RBrace "}"
Semicolon ";"
Slash "/"
Slash "/"
Let "let"
Less "<"
Word "pat"
Greater ">"
Equals "="
Word "__let_else_tmp_N"
Semicolon ";"
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Word "The"
Error "`"
Less "<"
Word "div"
Greater ">"
Error "`"
Word "block"
Word "is"
Word "expected"
Word "to"
Word "diverge"
LParen "("
Return "return"
Slash "/"
Throw "throw"
Slash "/"
Break "break"
Slash "/"
Slash "/"
Slash "/"
Continue "continue"
RParen ")"
Comma ","
Word "exactly"
Word "like"
Word "Rust"
Error "'"
Word "s"
Word "let-else"
Dot "."
Function "function"
Word "let_else_returns_on_mismatch"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
Quote "\""
Word "oops"
Quote "\""
Semicolon ";"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "v"
Else "else"
LBrace "{"
Return "return"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "n"
Semicolon ";"
RBrace "}"
Function "function"
Word "let_else_binds_when_match"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "42"
Semicolon ";"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "v"
Else "else"
LBrace "{"
Return "return"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "n"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Function "function"
Word "let_else_with_throw"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "7"
Semicolon ";"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "v"
Else "else"
LBrace "{"
Throw "throw"
Quote "\""
Word "expected"
Word "int"
Quote "\""
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "n"
Semicolon ";"
RBrace "}"
Function "function"
Word "let_else_inside_loop_break"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "acc"
Equals "="
IntegerLiteral "0"
Semicolon ";"
Let "let"
Word "i"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
LParen "("
Word "i"
Less "<"
IntegerLiteral "5"
RParen ")"
LBrace "{"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
Word "i"
Semicolon ";"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "v"
Else "else"
LBrace "{"
Break "break"
Semicolon ";"
RBrace "}"
Semicolon ";"
Word "acc"
Equals "="
Word "acc"
Plus "+"
Word "n"
Semicolon ";"
Word "i"
Equals "="
Word "i"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "acc"
Semicolon ";"
RBrace "}"
Function "function"
Word "let_else_inside_loop_continue"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "acc"
Equals "="
IntegerLiteral "0"
Semicolon ";"
Let "let"
Word "i"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
LParen "("
Word "i"
Less "<"
IntegerLiteral "5"
RParen ")"
LBrace "{"
Word "i"
Equals "="
Word "i"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
Let "let"
Word "v"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
Word "i"
Semicolon ";"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "v"
Else "else"
LBrace "{"
Continue "continue"
Semicolon ";"
RBrace "}"
Semicolon ";"
Word "acc"
Equals "="
Word "acc"
Plus "+"
Word "n"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "acc"
Semicolon ";"
RBrace "}"
Function "function"
Word "let_else_multiple_bindings_in_sequence"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "a_raw"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "1"
Semicolon ";"
Let "let"
Word "b_raw"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "2"
Semicolon ";"
Let "let"
Word "a"
Colon ":"
Word "int"
Equals "="
Word "a_raw"
Else "else"
LBrace "{"
Return "return"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Semicolon ";"
Let "let"
Word "b"
Colon ":"
Word "int"
Equals "="
Word "b_raw"
Else "else"
LBrace "{"
Return "return"
Minus "-"
IntegerLiteral "2"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "a"
Plus "+"
Word "b"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "NOTE"
Colon ":"
Word "irrefutable"
Word "let-else"
LParen "("
Word "e"
Dot "."
Word "g"
Dot "."
Error "`"
Let "let"
Word "n"
Equals "="
IntegerLiteral "5"
Else "else"
LBrace "{"
DotDotDot "..."
RBrace "}"
Error "`"
Word "or"
Slash "/"
Slash "/"
Error "`"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
IntegerLiteral "1"
Plus "+"
IntegerLiteral "2"
Plus "+"
IntegerLiteral "3"
Else "else"
LBrace "{"
DotDotDot "..."
RBrace "}"
Error "`"
Word "where"
Word "the"
Word "initializer"
Word "is"
Word "statically"
Slash "/"
Slash "/"
Word "known"
Word "to"
Match "match"
Word "the"
Word "pattern"
RParen ")"
Word "is"
Word "intentionally"
Word "not"
Word "covered"
Word "here"
Error "—"
Word "BAML"
Error "'"
Word "s"
Slash "/"
Slash "/"
Match "match"
Word "exhaustiveness"
Word "check"
Word "reports"
Word "the"
Word "diverge"
Word "arm"
Word "as"
Quote "\""
Word "unreachable"
Word "arm"
Quote "\""
Dot "."
Slash "/"
Slash "/"
Word "Rust"
Word "rejects"
Word "the"
Word "same"
Word "pattern"
Word "as"
Error "`"
Word "irrefutable"
Word "let-else"
Word "pattern"
Error "`"
Dot "."
Function "function"
Word "let_else_with_call_initializer"
LParen "("
Word "x"
Colon ":"
Word "int"
Pipe "|"
Word "string"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "x"
Else "else"
LBrace "{"
Return "return"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "n"
Semicolon ";"
RBrace "}"
