baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__01_lexer__let_else_edge_cases.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Edge"
Word "cases"
For "for"
Error "`"
Let "let"
DotDotDot "..."
Else "else"
Error "`"
Colon ":"
Slash "/"
Slash "/"
Minus "-"
Word "the"
Word "binding"
Word "IS"
Word "visible"
Word "after"
Word "the"
Word "let-else"
Word "statement"
Slash "/"
Slash "/"
Minus "-"
Word "the"
Word "binding"
Word "is"
Word "NOT"
Word "visible"
Word "inside"
Word "the"
Else "else"
Word "block"
Slash "/"
Slash "/"
Minus "-"
Word "shadowing"
Word "an"
Word "outer"
Word "binding"
Word "with"
Word "the"
Word "same"
Word "name"
Word "works"
Slash "/"
Slash "/"
Minus "-"
Word "sequence"
Word "of"
Word "let-else"
Word "statements"
Word "thread"
Word "bindings"
Word "forward"
Slash "/"
Slash "/"
Minus "-"
Word "the"
Word "divergent"
Else "else"
Word "block"
Word "can"
Word "use"
Word "control"
Word "flow"
LParen "("
Return "return"
Comma ","
Throw "throw"
Comma ","
Break "break"
Comma ","
Continue "continue"
RParen ")"
Slash "/"
Slash "/"
Minus "-"
Word "wildcard"
Word "let-else"
LParen "("
Word "no"
Word "binding"
RParen ")"
Word "is"
Word "just"
Word "a"
Word "type"
Word "assertion"
Slash "/"
Slash "/"
Word "Shadowing"
Colon ":"
Word "outer"
Error "`"
Word "x"
Error "`"
Word "is"
Word "shadowed"
Word "by"
Word "the"
Word "let-else"
Comma ","
Word "then"
Word "the"
Word "shadow"
Word "is"
Word "the"
Slash "/"
Slash "/"
Word "only"
Error "`"
Word "x"
Error "`"
Word "visible"
Word "until"
Word "end"
Word "of"
Word "scope"
Dot "."
Function "function"
Word "let_else_shadows_outer"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Equals "="
IntegerLiteral "999"
Semicolon ";"
Let "let"
Word "raw"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "7"
Semicolon ";"
Let "let"
Word "x"
Colon ":"
Word "int"
Equals "="
Word "raw"
Else "else"
LBrace "{"
Return "return"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "x"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Inside"
Word "the"
Else "else"
Comma ","
Word "the"
Word "name"
Word "being"
Word "bound"
Word "is"
Word "NOT"
Word "yet"
In "in"
Word "scope"
Dot "."
Word "Here"
Error "`"
Word "outer"
Error "`"
Slash "/"
Slash "/"
LParen "("
Word "declared"
Word "before"
Word "the"
Word "let-else"
RParen ")"
Word "is"
Word "the"
Word "one"
Word "used"
Dot "."
Function "function"
Word "let_else_else_sees_outer_not_inner_yet"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "n"
Equals "="
IntegerLiteral "11"
Semicolon ";"
Let "let"
Word "raw"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
Quote "\""
Word "oops"
Quote "\""
Semicolon ";"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "raw"
Else "else"
LBrace "{"
Slash "/"
Slash "/"
Error "`"
Word "n"
Error "`"
Word "here"
Word "is"
Word "the"
Word "OUTER"
IntegerLiteral "11"
Comma ","
Word "NOT"
Word "the"
Word "let-else"
Error "'"
Word "s"
Word "binding"
Dot "."
Return "return"
Word "n"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "n"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Two"
Word "consecutive"
Word "let-else"
Word "statements"
Error "—"
Word "bindings"
Word "thread"
Word "forward"
Dot "."
Function "function"
Word "let_else_sequence_threads_bindings"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "raw_a"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "1"
Semicolon ";"
Let "let"
Word "a"
Colon ":"
Word "int"
Equals "="
Word "raw_a"
Else "else"
LBrace "{"
Return "return"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Semicolon ";"
Let "let"
Word "raw_b"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
Word "a"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
Let "let"
Word "b"
Colon ":"
Word "int"
Equals "="
Word "raw_b"
Else "else"
LBrace "{"
Return "return"
Minus "-"
IntegerLiteral "2"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "a"
Plus "+"
Word "b"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Wildcard"
Word "let-else"
Error "—"
Word "no"
Word "binding"
Word "introduced"
Comma ","
Word "just"
Word "a"
Word "runtime"
Word "type"
Word "assertion"
Dot "."
Function "function"
Word "let_else_wildcard_no_binding"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "raw"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "5"
Semicolon ";"
Let "let"
Word "_"
Colon ":"
Word "int"
Equals "="
Word "raw"
Else "else"
LBrace "{"
Return "return"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "let-else"
Word "where"
Word "the"
Else "else"
Word "block"
Word "uses"
Error "`"
Break "break"
Error "`"
Word "to"
Word "exit"
Word "a"
Word "surrounding"
Word "loop"
Dot "."
Function "function"
Word "let_else_with_break_in_loop"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "acc"
Equals "="
IntegerLiteral "0"
Semicolon ";"
Let "let"
Word "i"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
LParen "("
Word "i"
Less "<"
IntegerLiteral "6"
RParen ")"
LBrace "{"
Let "let"
Word "raw"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
Word "i"
Semicolon ";"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "raw"
Else "else"
LBrace "{"
Break "break"
Semicolon ";"
RBrace "}"
Semicolon ";"
Word "acc"
Equals "="
Word "acc"
Plus "+"
Word "n"
Semicolon ";"
Word "i"
Equals "="
Word "i"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "acc"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "let-else"
Word "where"
Word "the"
Else "else"
Word "block"
Word "uses"
Error "`"
Continue "continue"
Error "`"
Dot "."
Function "function"
Word "let_else_with_continue_in_loop"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "acc"
Equals "="
IntegerLiteral "0"
Semicolon ";"
Let "let"
Word "i"
Equals "="
IntegerLiteral "0"
Semicolon ";"
While "while"
LParen "("
Word "i"
Less "<"
IntegerLiteral "5"
RParen ")"
LBrace "{"
Word "i"
Equals "="
Word "i"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
Let "let"
Word "raw"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
Word "i"
Semicolon ";"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "raw"
Else "else"
LBrace "{"
Continue "continue"
Semicolon ";"
RBrace "}"
Semicolon ";"
Word "acc"
Equals "="
Word "acc"
Plus "+"
Word "n"
Semicolon ";"
RBrace "}"
Semicolon ";"
Return "return"
Word "acc"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "let-else"
Error "'"
Word "s"
Word "binding"
Word "is"
Word "visible"
In "in"
Word "a"
Word "lambda"
Word "declared"
Word "AFTER"
Word "the"
Word "let-else"
Dot "."
Function "function"
Word "let_else_binding_captured_in_lambda"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "raw"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "9"
Semicolon ";"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "raw"
Else "else"
LBrace "{"
Return "return"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Semicolon ";"
Let "let"
Word "f"
Equals "="
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "n"
Plus "+"
IntegerLiteral "1"
RBrace "}"
Semicolon ";"
Return "return"
Word "f"
LParen "("
RParen ")"
Semicolon ";"
RBrace "}"
Slash "/"
Slash "/"
Word "Outer"
Word "scope"
Word "can"
Word "use"
Word "the"
Word "binding"
Word "even"
Word "though"
Word "the"
Else "else"
Word "block"
Word "diverged"
Dot "."
Function "function"
Word "let_else_after_block_uses_binding"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "raw"
Colon ":"
Word "int"
Pipe "|"
Word "string"
Equals "="
IntegerLiteral "5"
Semicolon ";"
Let "let"
Word "n"
Colon ":"
Word "int"
Equals "="
Word "raw"
Else "else"
LBrace "{"
Return "return"
Minus "-"
IntegerLiteral "1"
Semicolon ";"
RBrace "}"
Semicolon ";"
Let "let"
Word "doubled"
Equals "="
Word "n"
Star "*"
IntegerLiteral "2"
Semicolon ";"
Return "return"
Word "doubled"
Semicolon ";"
RBrace "}"
